feat: implement categories section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,180 @@
 </head>
 
 <body>
+    <!-- Top notification bar -->
+    <div class="notification-bar">
+        <div class="container">
+            <div class="notification-content">
+                <div class="notification-item">Hai bisogno di aiuto?</div>
+                <div class="notification-item">Ottieni Subito Uno Sconto Del 10% Iscrivendoti Alla Newsletter</div>
+                <div class="notification-item">Informazioni Di Consegna</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Header -->
+    <header class="header">
+        <!-- Main header -->
+        <div class="main-header">
+            <div class="container">
+                <div class="header-content">
+                    <!-- Logo -->
+                    <div class="logo">
+                        <a href="/">
+                            <img class="logo-img" src="assets/images/logo.png" alt="">
+                            <img class="logo-title" src="assets/images/logo-title.png" alt="">
+                        </a>
+                    </div>
+
+                    <!-- Navigation -->
+                    <nav class="main-nav">
+                        <ul class="nav-list">
+                            <li><a href="/" class="active">Home</a></li>
+                            <li class="has-dropdown">
+                                <a href="#">
+                                    Categorie
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="chevron-down">
+                                        <polyline points="6 9 12 15 18 9"></polyline>
+                                    </svg>
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a href="#">Fantasy Friends</a>
+                                    <a href="#">Vintage Treasures</a>
+                                    <a href="#">Wild Adventures</a>
+                                </div>
+                            </li>
+                            <li><a href="#">Novità</a></li>
+                            <li><a href="#">Marchi</a></li>
+                            <li><a href="#">Carte regalo</a></li>
+                            <li><a href="#">Chi siamo</a></li>
+                        </ul>
+                    </nav>
+
+                    <!-- Header actions -->
+                    <div class="header-actions">
+                        <button class="icon-btn" aria-label="Search">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <circle cx="11" cy="11" r="8"></circle>
+                                <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                            </svg>
+                        </button>
+                        <button class="icon-btn" aria-label="Account">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="12" cy="7" r="4"></circle>
+                            </svg>
+                        </button>
+                        <button class="icon-btn" aria-label="Wishlist">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path
+                                    d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+                                </path>
+                            </svg>
+                        </button>
+                        <button class="icon-btn" aria-label="Cart">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <circle cx="9" cy="21" r="1"></circle>
+                                <circle cx="20" cy="21" r="1"></circle>
+                                <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+                            </svg>
+                        </button>
+                        <a href="#" class="btn-primary">Acquista ora</a>
+                    </div>
+
+                    <!-- Mobile menu button -->
+                    <button class="mobile-menu-toggle" aria-label="Toggle menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Promo banner
+        <div class="promo-banner">
+            <div class="container">
+                <div class="promo-content">
+                    <span class="promo-text">"Ecco L'offerta GUND:</span>
+                    <span class="promo-highlight">40% Di Sconto Dal 20 Aprile Al 5 Maggio!"</span>
+                </div>
+            </div>
+        </div> -->
+    </header>
+
+    <!-- Main content -->
+    <main>
+        <img src="assets/images/hero-teddy-collection.jpg">
+
+        <!-- Intro section -->
+        <section class="intro-section">
+            <div class="container">
+                <h1 class="main-title">Esplora E Trova Il Tuo Preferito Su TeddyShop</h1>
+                <p class="intro-text">"Siamo felici di presentare la nostra varietà di nuovi personaggi di peluche!
+                    Scopri la collezione, pronta per essere amata, regalata o diventare il tuo nuovo migliore amico"</p>
+            </div>
+        </section>
+
+        <!-- Categories section -->
+        <section class="categories-section">
+            <div class="container">
+                <div class="categories-grid">
+                    <!-- Fantasy Friends -->
+                    <div class="category-card">
+                        <div class="category-image">
+                            <img src="images/fantasy-friends.png" alt="Fantasy Friends Collection" width="500"
+                                height="500">
+                        </div>
+                        <div class="category-content">
+                            <h3 class="category-title">Fantasy Friends</h3>
+                            <p class="category-description">Collezione di peluche mitici e fantastici: Perfetti per
+                                sognare ad occhi aperti.</p>
+                            <a href="#" class="category-link">Scopri di più</a>
+                        </div>
+                    </div>
+
+                    <!-- Vintage Treasures -->
+                    <div class="category-card">
+                        <div class="category-image">
+                            <img src="images/vintage-treasures.png" alt="Vintage Treasures Collection" width="300"
+                                height="300">
+                        </div>
+                        <div class="category-content">
+                            <h3 class="category-title">Vintage Treasures</h3>
+                            <p class="category-description">Collezione retrò, peluche tradizionali e storici, per un
+                                tocco di nostalgia.</p>
+                            <a href="#" class="category-link">Scopri di più</a>
+                        </div>
+                    </div>
+
+                    <!-- Wild Adventures -->
+                    <div class="category-card">
+                        <div class="category-image">
+                            <img src="images/wild-adventures.png" alt="Wild Adventures Collection" width="300"
+                                height="300">
+                        </div>
+                        <div class="category-content">
+                            <h3 class="category-title">Wild Adventures</h3>
+                            <p class="category-description">In questa collezione troverai peluche di animali esotici per
+                                tutti tipi di avventure.</p>
+                            <a href="#" class="category-link">Scopri di più</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- Footer -->
     <footer class="footer">
         <!-- Newsletter Section -->
