feat: implement spring section

--- a/index.html
+++ b/index.html
@@ -184,6 +184,96 @@
                 </div>
             </div>
         </section>
+
+        <!-- Spring Collection Section -->
+        <section class="spring-collection">
+            <div class="container">
+                <div class="spring-header">
+                    <div class="spring-title-wrapper">
+                        <img src="assets/images/spring-icon.png" alt="" class="spring-icon">
+                        <h2 class="spring-title">Acquista Per La Primavera</h2>
+                    </div>
+                </div>
+
+                <div class="spring-products">
+                    <!-- Teddy Bear -->
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/images/teddy-bear.png" alt="Teddy - Orso di peluche">
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Teddy - 10.5 Orso</h3>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="product-price">$24</div>
+                        </div>
+                    </div>
+
+                    <!-- Trixy Triceratops -->
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/images/trixy-triceratops.png" alt="Trixy - Triceratopo di peluche">
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Trixy - 8.5 Triceratopo</h3>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="product-price">$30</div>
+                        </div>
+                    </div>
+
+                    <!-- Bunny Rabbit -->
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/images/bunny-rabbit.png" alt="Bunny - Coniglio di peluche">
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Bunny - 10.5 Coniglio</h3>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="product-price">$25</div>
+                        </div>
+                    </div>
+
+                    <!-- Gigi Giraffe -->
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/images/gigi-giraffe.png" alt="Gigi - Giraffa di peluche">
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Gigi - 12.5 Giraffa</h3>
+                            <div class="product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="product-price">$30</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spring-action">
+                    <a href="#" class="btn-explore">Esplora adesso</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
