feat: implement features/popular sections

--- a/index.html
+++ b/index.html
@@ -274,6 +274,143 @@
                 </div>
             </div>
         </section>
+
+        <!-- Features Section -->
+        <section class="ts-features-section">
+            <div class="container">
+                <h2 class="ts-features-main-title">Ecco Cosa Possiamo Fare Per Te</h2>
+
+                <div class="ts-features-grid">
+                    <!-- Secure Shipping -->
+                    <div class="ts-feature-item">
+                        <div class="ts-feature-icon">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <h3 class="ts-feature-item-title">Spedizioni sicure</h3>
+                        <p class="ts-feature-item-desc">Offriamo consegne rapide per garantirti che il tuo peluche
+                            arrivi a destinazione in perfette condizioni.</p>
+                    </div>
+
+                    <!-- Quality Materials -->
+                    <div class="ts-feature-item">
+                        <div class="ts-feature-icon">
+                            <i class="fas fa-medal"></i>
+                        </div>
+                        <h3 class="ts-feature-item-title">Materiali di qualità</h3>
+                        <p class="ts-feature-item-desc">Siamo impegnati a utilizzare materiali di qualità per i nostri
+                            peluche, per garantirti un prodotto che durerà nel tempo.</p>
+                    </div>
+
+                    <!-- Excellent Service -->
+                    <div class="ts-feature-item">
+                        <div class="ts-feature-icon">
+                            <i class="fas fa-crown"></i>
+                        </div>
+                        <h3 class="ts-feature-item-title">Servizio eccellente</h3>
+                        <p class="ts-feature-item-desc">La nostra assistenza clienti è a tua disposizione per rispondere
+                            a tutte le tue domande e risolvere qualsiasi problema.</p>
+                    </div>
+                </div>
+
+                <!-- Pagination dots -->
+                <div class="ts-pagination-dots">
+                    <span class="ts-dot ts-dot-active"></span>
+                    <span class="ts-dot"></span>
+                    <span class="ts-dot"></span>
+                    <span class="ts-dot"></span>
+                </div>
+            </div>
+        </section>
+
+        <!-- Popular Products Section -->
+        <section class="ts-popular-section">
+            <div class="container">
+                <div class="ts-popular-header">
+                    <div class="ts-popular-title-wrapper">
+                        <img src="assets/images/logo.png" alt="" class="ts-popular-icon">
+                        <h2 class="ts-popular-main-title">I Peluche Più Ricercati</h2>
+                    </div>
+                </div>
+
+                <div class="ts-popular-products-grid">
+                    <!-- Butterfly Plush -->
+                    <div class="ts-popular-product-card">
+                        <div class="ts-popular-product-image">
+                            <img src="assets/images/aria-butterfly.png" alt="Aria - Farfalla di peluche">
+                        </div>
+                        <div class="ts-popular-product-info">
+                            <h3 class="ts-popular-product-name">Aria- 11.5 Farfalla</h3>
+                            <div class="ts-popular-product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="ts-popular-product-price">$35</div>
+                        </div>
+                    </div>
+
+                    <!-- Dragon Plush -->
+                    <div class="ts-popular-product-card">
+                        <div class="ts-popular-product-image">
+                            <img src="assets/images/blaze-dragon.png" alt="Blaze - Drago di peluche">
+                        </div>
+                        <div class="ts-popular-product-info">
+                            <h3 class="ts-popular-product-name">Blaze - 13.5 Drago</h3>
+                            <div class="ts-popular-product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="ts-popular-product-price">$25</div>
+                        </div>
+                    </div>
+
+                    <!-- Hare Plush -->
+                    <div class="ts-popular-product-card">
+                        <div class="ts-popular-product-image">
+                            <img src="assets/images/clover-hare.png" alt="Clover - Lepre di peluche">
+                        </div>
+                        <div class="ts-popular-product-info">
+                            <h3 class="ts-popular-product-name">Clover - 10.5 Lepre</h3>
+                            <div class="ts-popular-product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="ts-popular-product-price">$30</div>
+                        </div>
+                    </div>
+
+                    <!-- Elephant Plush -->
+                    <div class="ts-popular-product-card">
+                        <div class="ts-popular-product-image">
+                            <img src="assets/images/jumbo-elephant.png" alt="Jumbo - Elefante di peluche">
+                        </div>
+                        <div class="ts-popular-product-info">
+                            <h3 class="ts-popular-product-name">Jumbo - 10.5 Elefante</h3>
+                            <div class="ts-popular-product-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="ts-popular-product-price">$25</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ts-popular-action">
+                    <a href="#" class="btn-explore">Esplora adesso</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
