feat: implement special features section

--- a/index.html
+++ b/index.html
@@ -411,6 +411,150 @@
                 </div>
             </div>
         </section>
+
+        <!-- Special Features Section -->
+        <section class="special-features-section">
+            <div class="container">
+                <div class="special-features-header">
+                    <div class="heart-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                            fill="#5ECBC1">
+                            <path
+                                d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+                            </path>
+                        </svg>
+                    </div>
+                    <h2 class="special-features-title">"Aggiungi Un Tocco Speciale Al Tuo Peluche"</h2>
+                </div>
+
+                <div class="special-features-grid">
+                    <!-- Gift Card Card -->
+                    <div class="special-feature-card gift-card">
+                        <div class="special-feature-image">
+                            <img src="assets/images/nursery-decoration.png" alt="Decorazione per cameretta con peluche">
+                        </div>
+                        <div class="special-feature-content">
+                            <h3 class="special-feature-title">Regala un sorriso con la nostra Gift Card</h3>
+                            <p class="special-feature-desc">Vuoi fare un regalo ma non sai cosa scegliere? La nostra
+                                Gift Card è la soluzione perfetta! Con essa, il destinatario potrà scegliere il peluche
+                                che preferisce tra la nostra vasta selezione. Scopri di più!</p>
+                            <a href="#" class="special-feature-link">
+                                Scopri di più
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                    <polyline points="12 5 19 12 12 19"></polyline>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Weekly Offers Card -->
+                    <div class="special-feature-card offers-card">
+                        <div class="special-feature-image">
+                            <img src="assets/images/mountain-nursery.png" alt="Cameretta con tema montagne">
+                        </div>
+                        <div class="special-feature-content">
+                            <h3 class="special-feature-title">Le offerte speciali della settimana</h3>
+                            <p class="special-feature-desc">Dai unicorni alle nostre offerte speciali! Prodotti
+                                selezionati per i tuoi peluche più popolari. Ma affrettati, le offerte sono per tempo
+                                limitato!</p>
+                            <a href="#" class="special-feature-link">
+                                Scopri di più
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                    <polyline points="12 5 19 12 12 19"></polyline>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Personalization Card -->
+                    <div class="special-feature-card personalization-card">
+                        <div class="special-feature-image">
+                            <img src="assets/images/giraffe-plush.png" alt="Giraffa di peluche personalizzabile">
+                        </div>
+                        <div class="special-feature-content">
+                            <h3 class="special-feature-title">Personalizza il tuo peluche con noi</h3>
+                            <p class="special-feature-desc">Vuoi rendere il tuo peluche ancora più speciale? Abbiamo
+                                creato un servizio di personalizzazione per rendere il tuo peluche unico! Utilizza un
+                                servizio di personalizzazione per tutti i nostri peluche, rendendoli unici e
+                                indimenticabili.</p>
+                            <a href="#" class="special-feature-link">
+                                Scopri di più
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                    <polyline points="12 5 19 12 12 19"></polyline>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonials Section -->
+        <section class="testimonials-section">
+            <div class="container">
+                <div class="testimonials-header">
+                    <div class="testimonials-title-wrapper">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="#5ECBC1" class="testimonials-heart-icon">
+                            <path
+                                d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+                            </path>
+                        </svg>
+                        <h2 class="testimonials-title">Opinioni Dei Nostri Clienti</h2>
+                    </div>
+                </div>
+
+                <div class="testimonials-grid">
+                    <!-- Testimonial 1 -->
+                    <div class="testimonial-card">
+                        <p class="testimonial-text">"Questo peluche è fantastico! La qualità del materiale è eccezionale
+                            e la sua morbidezza lo rende perfetto per abbracciarlo"</p>
+                        <div class="testimonial-author">
+                            <div class="testimonial-avatar">M</div>
+                            <div class="testimonial-info">
+                                <h4 class="testimonial-name">Maria Capellari</h4>
+                                <p class="testimonial-location">Cremona, mamma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 2 -->
+                    <div class="testimonial-card">
+                        <p class="testimonial-text">"Sono sono soddisfatto di questo peluche. Il materiale sembra
+                            accurato e la cucitura è piuttosto appropriata"</p>
+                        <div class="testimonial-author">
+                            <div class="testimonial-avatar">C</div>
+                            <div class="testimonial-info">
+                                <h4 class="testimonial-name">Claudio Rioli</h4>
+                                <p class="testimonial-location">Padova, genitore</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 3 -->
+                    <div class="testimonial-card">
+                        <p class="testimonial-text">"Il peluche creato è di alta qualità, con dettagli ben curati e una
+                            consistenza morbida e soffice. Consiglio vivamente questo negozio!"</p>
+                        <div class="testimonial-author">
+                            <div class="testimonial-avatar">J</div>
+                            <div class="testimonial-info">
+                                <h4 class="testimonial-name">Jessica Marta</h4>
+                                <p class="testimonial-location">Piacenza, nonna</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
