fix: add pagination dots to testimonial sections

--- a/index.html
+++ b/index.html
@@ -553,6 +553,14 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Pagination dots -->
+                <div class="ts-pagination-dots">
+                    <span class="ts-dot ts-dot-active"></span>
+                    <span class="ts-dot"></span>
+                    <span class="ts-dot"></span>
+                    <span class="ts-dot"></span>
+                </div>
             </div>
         </section>
     </main>
