feat: implement copyright label

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                     </div>
                     <div class="newsletter-form-wrapper">
                         <form class="newsletter-form">
-                            <input type="email" placeholder="inserisci la tua email" required>
+                            <input type="email" placeholder="Inserisci la tua email" required>
                             <button type="submit">Iscriviti adesso</button>
                         </form>
                         <div class="privacy-acceptance">
@@ -648,9 +648,25 @@
                             <li><a href="#">Facebook</a></li>
                             <li><a href="#">Twitter</a></li>
                             <li><a href="#">You Tube</a></li>
-                            <li><a href="#">Pinteres</a></li>
+                            <li><a href="#">Pinterest</a></li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Copyright Section -->
+        <div class="footer-copyright">
+            <div class="container">
+                <div class="copyright-content">
+                    <!-- Logo -->
+                    <div class="logo">
+                        <a href="/">
+                            <img class="logo-img" src="assets/images/logo.png" alt="">
+                            <img class="logo-title" src="assets/images/logo-title.png" alt="">
+                        </a>
+                    </div>
+                    <p class="copyright-text">© 2023 TeddyShop. Tutti i diritti riservati.</p>
                 </div>
             </div>
         </div>
