fix: bump headers to intersections

--- a/index.html
+++ b/index.html
@@ -322,16 +322,16 @@
             </div>
         </section>
 
+        <div class="ts-popular-header">
+            <div class="ts-popular-title-wrapper">
+                <img src="assets/images/logo.png" alt="" class="ts-popular-icon">
+                <h2 class="ts-popular-main-title">I Peluche Più Ricercati</h2>
+            </div>
+        </div>
+
         <!-- Popular Products Section -->
         <section class="ts-popular-section">
             <div class="container">
-                <div class="ts-popular-header">
-                    <div class="ts-popular-title-wrapper">
-                        <img src="assets/images/logo.png" alt="" class="ts-popular-icon">
-                        <h2 class="ts-popular-main-title">I Peluche Più Ricercati</h2>
-                    </div>
-                </div>
-
                 <div class="ts-popular-products-grid">
                     <!-- Butterfly Plush -->
                     <div class="ts-popular-product-card">
@@ -498,21 +498,21 @@
             </div>
         </section>
 
+        <div class="testimonials-header">
+            <div class="testimonials-title-wrapper">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#5ECBC1"
+                    class="testimonials-heart-icon">
+                    <path
+                        d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+                    </path>
+                </svg>
+                <h2 class="testimonials-title">Opinioni Dei Nostri Clienti</h2>
+            </div>
+        </div>
+
         <!-- Testimonials Section -->
         <section class="testimonials-section">
             <div class="container">
-                <div class="testimonials-header">
-                    <div class="testimonials-title-wrapper">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                            fill="#5ECBC1" class="testimonials-heart-icon">
-                            <path
-                                d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
-                            </path>
-                        </svg>
-                        <h2 class="testimonials-title">Opinioni Dei Nostri Clienti</h2>
-                    </div>
-                </div>
-
                 <div class="testimonials-grid">
                     <!-- Testimonial 1 -->
                     <div class="testimonial-card">
